frontend/src/styles/style.css
*{
    margin: 0;
    padding: 0;
    overflow: hidden;
    font-family: 'Montserrat', sans-serif;
    color: #4C3D3D;
}

/* Typography */

h1{
    font-weight: bold;
    font-size: 25;
}
h3{
    color: white;
    text-transform: uppercase;
}
p{
    font-size: 14;
}

b{
    cursor: pointer;
}

/* App */

.App{
    display: flex;
    justify-content: center;
    background-color: #FFF7D4;
    width: 100vw;
    height: 100vh;
}

/* Login/Register pages */

.login-container,.register-container{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    width: 1000px;
    height: 500px;
    margin: auto;
    background-color: #FFD95A;
    box-shadow: 12px 12px 20px #4C3D3D;
}

.login-form,.register-form{
    margin: auto;
}

.login-form-item,.register-form-item,.creation-form-item{
    display: flex;
    
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 10px;
    margin: auto;
}

.form-input{
    text-decoration: none;
    border-radius: 10px;
    padding: 10px;
    font-weight: bold;
    border: none
}

.input-form-container{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    
}

.login-side-container,.register-side-container{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 40%;
    height: 100%;
    background-color: #C07F00;
}

.login-logo-img,.register-logo-img{
    height: 30%;
}

/* Task Viewer/Maker pages */
.taskviewer-container, .taskcreator-container{
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
    width: 1000px;
    height: 500px;
    margin: auto;
    background-color: #FFD95A;
    box-shadow: 12px 12px 20px #4C3D3D;
}

/* Components */
.login-button-container,.register-button-container, .create-task-button-container,.button-container,.lang-button-container{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-direction: row;
    background-color: black;
    border: none;
    width: 70%;
    height: auto;
    padding: 0;
    margin: 0 auto;
}

.login-button,.register-button,.create-task-button,.page-switch-button, .lang-button{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    background-color: black;
    width: 100%;
    height: 100%;
    padding: 10px;
    cursor: pointer;
}

.lang-button-container{
    position: fixed;
    width: 65px;
    height: 60px;
}

.chevron-arrow-right {
    display: inline-block;
    border-right: 2px solid white;
    border-bottom: 2px solid white;
    width: 10px; height: 10px;
    animation: slide .5s forwards;
    opacity: 0 ; 
    transform: rotate(-45deg);
    transform: translateX(-100%);
  }

@keyframes slide{
    0%{
        transform: translateX(-100%);
        opacity: 0;
        transform: rotate(-45deg);
    }
    100% {transform: translateX(0%) ;
        opacity: 1 ; 
        transform: rotate(-45deg);}
}

.popup,.popup-progress, .popup-register-confirm,.popup-register-failure {
    position: fixed;
    top: 200px;
    left: 500px;
    width: 500px;
    height: 400px;
    box-shadow: rgba(0, 0, 0, 0.2);
    align-items: center;
    justify-content: center;
}

.popup-inner{
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    padding: 40px;
    background-color: white;
    align-items: center;
    justify-content: center;
    border-style: solid;
    border-width: 2px;
    border-color: black;
}
.enter-button {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    width: 60%;
    background-color: black;
    padding: 10px;
    cursor: pointer;
    
}

.close-button{
    position:absolute;
    top: 16px;
    right: 16px;
}

table {
    border: 1px solid #bbb;
    width: 100%;
    height: 30%;
    align-items: center;
    margin: auto;
    overflow-y: scroll;
    padding: 2px;
}

.table-container {
    width: 90%;
    min-height: 50px;
    max-height: 500px;
    padding: 0 10px 10px 10px;
    overflow-y: scroll;
}

thead {
    background-color: grey;
    position: sticky;
    top: 0px;
    margin: 0;
}
 
th {
    border-bottom: 1px solid black;
    border-top: 1px solid #ddd;
}
 
td {
    text-align: center;
    border-top: 1px solid #ddd;
    width: 1px;
}

.task-creation-form{
    display: flex;
    flex-direction: row;
}

/* Mobile View */

@media only screen and (max-width: 600px){
    .App{
        overflow-y: auto;
        overflow-x: auto;
    }
    .login-container,.register-container{
        flex-direction: column;
        width: 300px;
        height: 80vh;
    }

    .login-side-container,.register-side-container{
        width: 100%;
        height: 40%;
    }

    .login-form,.register-form{
        margin-bottom: 100px;
    }

    td {
        font-size: 14px;
    }

    .taskcreator-container, .taskviewer-container{
        height: 100vh;
        margin: 30px;
    }

    .task-creation-form{
        flex-direction: column;
    }

    .create-task-button-container{
        width: 70%;
        margin: 20px auto;
        overflow: hidden;
    }
    table {
        border-collapse: collapse;
       
        
    }
    
    .table-container {
        width:90%;
        overflow-x: auto;
        -webkit-overflow-scrolling: touch;
        
    }
}

